--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
 
 
     <LinearLayout
+        android:layout_marginTop="64dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
@@ -28,12 +29,14 @@
 
         <Button
             android:id="@+id/read"
+            android:text="Read"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/write"
+            android:text="Write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
